--- a/LambdaForums/Views/Manage/ShowRecoveryCodes.cshtml
+++ b/LambdaForums/Views/Manage/ShowRecoveryCodes.cshtml
@@ -1,4 +1,5 @@
-﻿@model ShowRecoveryCodesViewModel
+﻿@using LambdaForums.Models.ManageViewModels
+@model ShowRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
