--- a/LambdaForums/Views/Manage/ChangePassword.cshtml
+++ b/LambdaForums/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ChangePasswordViewModel
+﻿@using LambdaForums.Models.ManageViewModels
+@model ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
