--- a/LambdaForums/Views/Manage/EnableAuthenticator.cshtml
+++ b/LambdaForums/Views/Manage/EnableAuthenticator.cshtml
@@ -1,4 +1,5 @@
-﻿@model EnableAuthenticatorViewModel
+﻿@using LambdaForums.Models.ManageViewModels
+@model EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
