--- a/LambdaForums/Views/Manage/Index.cshtml
+++ b/LambdaForums/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IndexViewModel
+﻿@using LambdaForums.Models.ManageViewModels
+@model IndexViewModel
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
