--- a/LambdaForums/Views/Manage/_ManageNav.cshtml
+++ b/LambdaForums/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
-﻿@using LambdaForums.Views.Manage
+﻿@using DataLayer.Models
+@using LambdaForums.Views.Manage
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
