--- a/LambdaForums/Views/Shared/_LoginPartial.cshtml
+++ b/LambdaForums/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-@using Microsoft.AspNetCore.Identity
-@using LambdaForums.Models
+@using DataLayer.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
