--- a/LambdaForums/Views/Forum/Topic.cshtml
+++ b/LambdaForums/Views/Forum/Topic.cshtml
@@ -4,6 +4,13 @@
 
 @if (Model.Posts.Any())
 {
+    <span id="headingBtn">
+        <a asp-controller="Post" asp-action="Create" asp-route-id="@Model.Forum.Id" class="btn btn-newPost">Create Post</a>
+    </span>
+}
+
+@if (Model.Posts.Any())
+{
     <table class="table table-hover table-bordered">
         <tbody>
             @foreach (var post in Model.Posts)
