--- a/LambdaForums/Views/Shared/_Layout.cshtml
+++ b/LambdaForums/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@using DataLayer.Models
-@using Microsoft.AspNetCore.Identity
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
 
@@ -24,7 +23,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand navLogo" asp-controller="Home" asp-action="Index"></a>
@@ -82,8 +81,6 @@
                         </ul>
                     </form>
                 }
-
-                @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </nav>
