--- a/LambdaForums/wwwroot/css/site.css
+++ b/LambdaForums/wwwroot/css/site.css
@@ -119,6 +119,22 @@
     margin: 4px 0 16px 0;
 }
 
+/*Forum Topic Page*/
+.searchBar {
+    padding: 3px 5px 2px 12px;
+    margin: 8px;
+    background-color: #333;
+    width: 10%;
+    transition: ease .3s;
+    border: none;
+}
+
+    .searchBar:focus {
+        color: black;
+        width: 60%;
+        background-color: #fff;
+    }
+
 /*Post Page*/
 .postTitle {
     font-family: 'Roboto';
@@ -257,6 +273,13 @@
         background-color: #00897b !important;
         color: #fff !important;
     }
+
+.btn-forumSearch {
+    background: none !important;
+    border: none;
+    padding: 0 !important;
+    font: inherit;
+}
 
 /*Forum Index*/
 #forumIndexTable td {
