--- a/LambdaForums/Views/Shared/_Layout.cshtml
+++ b/LambdaForums/Views/Shared/_Layout.cshtml
@@ -76,7 +76,9 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li>Hello, @UserManager.GetUserName(User)</li>
                             <li>
-                                <a asp-controller="Account" asp-action="Logout">Sign Out</a>
+                                <button type="submit" class="btn btn-link navbar-btn navbar-link">
+                                    Sign Out
+                                </button>
                             </li>
                         </ul>
                     </form>
