Added uploading to Azure

--- a/LambdaForums/Views/Manage/ChangePassword.cshtml
+++ b/LambdaForums/Views/Manage/ChangePassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using LambdaForums.Models.ManageViewModels
-@model ChangePasswordViewModel
+﻿@model ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
