--- a/LambdaForums/Views/Manage/EnableAuthenticator.cshtml
+++ b/LambdaForums/Views/Manage/EnableAuthenticator.cshtml
@@ -1,5 +1,4 @@
-﻿@using LambdaForums.Models.ManageViewModels
-@model EnableAuthenticatorViewModel
+﻿@model EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
