--- a/LambdaForums/Views/Manage/Index.cshtml
+++ b/LambdaForums/Views/Manage/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using LambdaForums.Models.ManageViewModels
-@model IndexViewModel
+﻿@model IndexViewModel
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(ManageNavPages.Index);
