--- a/LambdaForums/Views/Manage/SetPassword.cshtml
+++ b/LambdaForums/Views/Manage/SetPassword.cshtml
@@ -1,5 +1,4 @@
-﻿@using LambdaForums.Models.ManageViewModels
-@model SetPasswordViewModel
+﻿@model SetPasswordViewModel
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
