--- a/LambdaForums/Views/Manage/ShowRecoveryCodes.cshtml
+++ b/LambdaForums/Views/Manage/ShowRecoveryCodes.cshtml
@@ -1,5 +1,4 @@
-﻿@using LambdaForums.Models.ManageViewModels
-@model ShowRecoveryCodesViewModel
+﻿@model ShowRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
