--- a/LambdaForums/Views/Account/Login.cshtml
+++ b/LambdaForums/Views/Account/Login.cshtml
@@ -1,8 +1,5 @@
-﻿@using System.Collections.Generic
-@using System.Linq
+﻿@using System.Linq
 @using DataLayer.Models
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
