--- a/LambdaForums/Views/Manage/ExternalLogins.cshtml
+++ b/LambdaForums/Views/Manage/ExternalLogins.cshtml
@@ -1,5 +1,4 @@
-﻿@using LambdaForums.Models.ManageViewModels
-@model ExternalLoginsViewModel
+﻿@model ExternalLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
