--- a/LambdaForums/Views/Manage/_ManageNav.cshtml
+++ b/LambdaForums/Views/Manage/_ManageNav.cshtml
@@ -1,6 +1,4 @@
-﻿@using DataLayer.Models
-@using LambdaForums.Views.Manage
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
