--- a/LambdaForums/Views/Manage/_ManageNav.cshtml
+++ b/LambdaForums/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using DataLayer.Models
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
