--- a/LambdaForums/Views/Profile/Detail.cshtml
+++ b/LambdaForums/Views/Profile/Detail.cshtml
@@ -1,6 +1,6 @@
-﻿@using DataLayer.Models
-@inject UserManager<ApplicationUser> UserManager
+﻿@inject UserManager<ApplicationUser> UserManager
 
+@using DataLayer.Models
 @model LambdaForums.Models.ApplicationUser.ProfileModel
 
 <div class="container body-content">
