--- a/LambdaForums/Views/Post/Index.cshtml
+++ b/LambdaForums/Views/Post/Index.cshtml
@@ -35,7 +35,7 @@
 
     @if (User.Identity.IsAuthenticated)
     {
-        <div class="row">
+        <div class="row" id="">
             <span>
                 <a asp-controller="Reply" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-newReply">
                     Post Reply
@@ -59,7 +59,7 @@
                         <div class="isAdmin smaller">Admin</div>
                         <br />
                     }
-                    <span>@reply.Created</span>
+                    <span class="postDate">@reply.Created</span>
                 </div>
                 <div class="col-md-9 replyContentContainer">
                     <div class="postContent">
