--- a/LambdaForums/Views/Reply/Create.cshtml
+++ b/LambdaForums/Views/Reply/Create.cshtml
@@ -25,7 +25,7 @@
     <div class="row">
         <div id="createReply">
             <div class="authorBlock">
-                You're submitting this Reply as @Model.AuthorName
+                You're submitting this Reply as <strong>@Model.AuthorName</strong>
             </div>
             <form asp-action="AddReply" method="post" id="addPostForm">
                 <div asp-validation-summary="All" class="text-danger"></div>
