--- a/LambdaForums/Views/Shared/_Layout.cshtml
+++ b/LambdaForums/Views/Shared/_Layout.cshtml
@@ -74,7 +74,9 @@
                 {
                     <form asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
                         <ul class="nav navbar-nav navbar-right">
-                            <li>Hello, @UserManager.GetUserName(User)</li>
+                            <li>
+                                <a asp-controller="Profile" asp-action="Detail" asp-route-id="@UserManager.GetUserId(User)">@UserManager.GetUserName(User)</a>
+                            </li>
                             <li>
                                 <button type="submit" class="btn btn-link navbar-btn navbar-link">
                                     Sign Out
