--- a/LambdaForums/wwwroot/css/site.css
+++ b/LambdaForums/wwwroot/css/site.css
@@ -206,6 +206,11 @@
     padding: 8px 0 24px 24px;
 }
 
+#replyDivider {
+    height: 2px;
+    margin-bottom: 12px;
+}
+
 #headingBtn {
     float: right;
     margin-right: 20px;
@@ -347,6 +352,16 @@
 .createPostSection {
     background-color: #fff;
     padding: 24px;
+} 
+
+.authorBlock {
+    padding: 18px;
+    border: 1px dashed #00afcf;
+    margin-bottom: 8px;
+}
+
+.noBorder {
+    border: none;
 }
 
 /*User Profiles*/
@@ -360,6 +375,7 @@
     width: 200px;
     height: 200px;
     background-color: #ddd;
+    background-size: 100%;
 }
 
 #userEmailLabel, #userBioLabel, #userCreatedLabel, #userRating, #userActiveLabel {
@@ -374,6 +390,57 @@
     color: #2569d5;
     font-family: 'Roboto';
     font-size: 1.7em;
+}
+
+.userProfilePic {
+    height: 140px;
+    width: 140px;
+    background-size: 100%;
+}
+
+/*Replies*/
+.replyContent {
+    display: table;
+    background-color: #fff;
+    border-bottom: 1px solid #aaa;
+    width: inherit;
+}
+
+#postReplyRow {
+    background-color: #3f51b5;
+    padding: 8px;
+}
+
+.replyContentContainer, .replyAuthorContainer {
+    display: table-cell;
+    padding: 12px;
+}
+
+.isAdmin {
+    display: inline-block;
+    padding: 3px;
+    background-color: #ffeb3b;
+    color: #000;
+    font-family: 'Roboto Mono'
+}
+
+.smaller {
+    font-size: 0.8em;
+}
+
+#originalPost {
+    background-color: #fff;
+    padding: 12px;
+    margin-bottom: 8px;
+}
+
+.hasRecentPost {
+    padding: 2px;
+    background-color: #fe552f;
+    color: #fff;
+    text-align: center;
+    border-radius: 1px;
+    width: 30px;
 }
 
 /* Wrapping element */
